# ExoSalience

./: Exo Quacker.pptx  data_preprocessing.ipynb  main.py  pyproject.toml  requirements.txt  test_client.py  test_tce.csv  torch-test.ipynb
api/: main.py
data/: create_input.py  preprocess.py
data/light_curve/: binning.py  kepler_io.py  periodic_event.py  util.py
data/test_output/: test.npz
lightcurve_data/mastDownload/Kepler/kplr006721123_sc_Q000300000000000000/: kplr006721123-2009350160919_slc.fits
lightcurve_data/mastDownload/Kepler/kplr010854555_sc_Q000000033000000000/: kplr010854555-2011024051157_slc.fits  kplr010854555-2011073133259_slc.fits
lightcurve_data/mastDownload/Kepler/kplr010872983_sc_Q000000003330030000/: kplr010872983-2011024051157_slc.fits  kplr010872983-2011073133259_slc.fits  kplr010872983-2012179063303_slc.fits
lightcurve_data/mastDownload/Kepler/kplr011446443_sc_Q113313330333033302/: kplr011446443-2009350160919_slc.fits  kplr011446443-2010009094841_slc.fits  kplr011446443-2010140023957_slc.fits  kplr011446443-2010203174610_slc.fits
src/: cnn.py  dataset.py  infer.py  model_scripted.pt  salience.py  train.ipynb  train.py
src/checkpoints/: config.json  model_final.pt
src/npzs/: test.npz  train.npz
web/: index.html
