[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ExoSalience"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Nathan Inbar" },
  { name = "Karen Xu" }
]

dependencies = [
  "exceptiongroup==1.3.0",
  "ipykernel==6.30.1",
  "lightkurve==2.5.1",
  "pipreqs==0.5.0",
  "tinycss2==1.4.0"
]

[project.optional-dependencies]
trainer = [
  "torch==2.2.2",
  "torchvision==0.17.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]