[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ExoSalience"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Nathan Inbar" },
  { name = "Karen Xu" }
]

dependencies = [
  "exceptiongroup==1.3.0",
  "ipykernel==6.30.1",
  "lightkurve==2.5.1",
  "pipreqs==0.5.0",
  "tinycss2==1.4.0",
  "pydl==1.0.1",
  "astropy==6.1.7"
]

[project.optional-dependencies]
trainer = [
  "torch==2.8.0",
  "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]